# F1_10_car

./: README.md  read.md
RRT_star/: CMakeLists.txt
RRT_star/maps/: rrt_params.yaml
RRT_star/src/: pure_pursuit.cpp  rrt.cpp
RRT_star/src/splined-RRT-star2/: CMakeLists.txt  Collision_Constraints.cpp  Collision_Constraints.h  Line_Angle.cpp  Line_Angle.h  NodeClass.cpp  NodeClass.h  constants.h  curve.cpp  curve.h  dubins.cpp  dubins.h  kdtree.cpp  kdtree.h  main.cpp  plot.cpp  plot.h  splined-RRT-star.cpp  splined-RRT-star.h  splined-RRT-star2.sln  splined-RRT-star2.vcxproj  splined-RRT-star2.vcxproj.filters
baihong_zeng_pure_pursuit/: CMakeLists.txt  package.xml  readme.md  test.pgm  test.yaml  waypoints.csv
baihong_zeng_pure_pursuit/scripts/: waypoints.py
baihong_zeng_pure_pursuit/src/: pure_pursuit.cpp
baihong_zeng_reactive/: CMakeLists.txt  README.txt  package.xml
baihong_zeng_reactive/src/: reactive_gap_follow.cpp  reactive_gap_follow.h  reactive_gap_follow_origin.cpp
baihong_zeng_roslab/: CMakeLists.txt  README.txt  scan_range.h
baihong_zeng_roslab/launch/: baihong_zeng_roslab.launch
baihong_zeng_roslab/msg/: scan_range.msg
baihong_zeng_roslab/rviz/: conf.rviz  correct.rviz  new_conf.rviz
baihong_zeng_roslab/src/: lidar_processing.cpp
baihong_zeng_safety/: CMakeLists.txt  package.xml
baihong_zeng_scan_matching/: CMakeLists.txt  README.md  package.xml
baihong_zeng_wallfollow/: CMakeLists.txt  README.txt  video link.txt
rrt/: waypoints.csv
rrt/src/: rrt.cpp
team_sixsixsix_rrt_lab/: CMakeLists.txt  package.xml  rrt_params.yaml
(+16 files in other folders)
